examples/codegen/effects/generators_basic.an
effect Emit a with
    emit: a -> Unit

iota (n: U32) = loop (i = 0) ->
    if i < n then
        emit i
        recur (i + 1)

for stream f =
    handle stream ()
    | emit x ->
        f x
        resume ()

for (fn () -> iota 10) print

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/generators_basic.an:1:1
// 1 | effect Emit a with	// error: This program has no `main` function
//   | 
// 2 |     emit: a -> Unit
// 
// examples/codegen/effects/generators_basic.an:2:13
// 1 | effect Emit a with
// 2 |     emit: a -> Unit	// error: Expected the end of this block but found `->`
//   |             ^^
// 
// examples/codegen/effects/generators_basic.an:6:9
// 5 |     if i < n then
// 6 |         emit i	// error: `emit` not found in scope
//   |         ^^^^
// 7 |         recur (i + 1)
// 
// examples/codegen/effects/generators_basic.an:9:1
//  9 | for stream f =	// error: Expected a top-level item but found `for`
//    | ^^^
// 10 |     handle stream ()
// 
// examples/codegen/effects/generators_basic.an:15:1
// 15 | for (fn () -> iota 10) print	// error: Expected a top-level item but found `for`
//    | ^^^
// 
// Found 5 errors and 0 warnings

